--- a/org.parallelj.designer/messages.properties
+++ b/org.parallelj.designer/messages.properties
@@ -42,29 +42,29 @@ ParallelJDiagramEditor_SaveErrorMessage=Could not save file.
 ParallelJElementChooserDialog_SelectModelElementTitle=Select model element
 ModelElementSelectionPageMessage=Select model element:
 ValidateActionMessage=Validate
-Parallelj1Group_title=parallelj
+#Parallelj1Group_title=parallelj
 Program1CreationTool_title=Program
 Program1CreationTool_desc=Create new Program
-InputCondition2CreationTool_title=InputCondition
-InputCondition2CreationTool_desc=Create new InputCondition
-OutputCondition3CreationTool_title=OutputCondition
-OutputCondition3CreationTool_desc=Create new OutputCondition
-Predicate4CreationTool_title=Predicate
-Predicate4CreationTool_desc=Create new Predicate
-Link5CreationTool_title=Link
-Link5CreationTool_desc=Create new Link
-Procedure6CreationTool_title=Procedure
-Procedure6CreationTool_desc=Create new Procedure
-ForEachLoop7CreationTool_title=ForEachLoop
-ForEachLoop7CreationTool_desc=Create new ForEachLoop
-WhileLoop8CreationTool_title=WhileLoop
-WhileLoop8CreationTool_desc=Create new WhileLoop
-Condition9CreationTool_title=Condition
-Condition9CreationTool_desc=Create new Condition
-Data10CreationTool_title=Data
-Data10CreationTool_desc=Create new Data
-Handler11CreationTool_title=Handler
-Handler11CreationTool_desc=Create new Handler
+#InputCondition2CreationTool_title=InputCondition
+#InputCondition2CreationTool_desc=Create new InputCondition
+#OutputCondition3CreationTool_title=OutputCondition
+#OutputCondition3CreationTool_desc=Create new OutputCondition
+#Predicate4CreationTool_title=Predicate
+#Predicate4CreationTool_desc=Create new Predicate
+#Link5CreationTool_title=Link
+#Link5CreationTool_desc=Create new Link
+#Procedure6CreationTool_title=Procedure
+#Procedure6CreationTool_desc=Create new Procedure
+#ForEachLoop7CreationTool_title=ForEachLoop
+#ForEachLoop7CreationTool_desc=Create new ForEachLoop
+#WhileLoop8CreationTool_title=WhileLoop
+#WhileLoop8CreationTool_desc=Create new WhileLoop
+#Condition9CreationTool_title=Condition
+#Condition9CreationTool_desc=Create new Condition
+#Data10CreationTool_title=Data
+#Data10CreationTool_desc=Create new Data
+#Handler11CreationTool_title=Handler
+#Handler11CreationTool_desc=Create new Handler
 ProgramProgramCompartmentEditPart_title=ProgramCompartment
 
 CommandName_OpenDiagram=Open Diagram
@@ -72,25 +72,25 @@ NavigatorGroupName_InputCondition_3001_incominglinks=incoming links
 NavigatorGroupName_InputCondition_3001_outgoinglinks=outgoing links
 NavigatorGroupName_OutputCondition_3002_incominglinks=incoming links
 NavigatorGroupName_OutputCondition_3002_outgoinglinks=outgoing links
-NavigatorGroupName_Data_3011_incominglinks=incoming links
-NavigatorGroupName_Data_3011_outgoinglinks=outgoing links
+#NavigatorGroupName_Data_3011_incominglinks=incoming links
+#NavigatorGroupName_Data_3011_outgoinglinks=outgoing links
 NavigatorGroupName_Link_4001_target=target
 NavigatorGroupName_Link_4001_source=source
-NavigatorGroupName_Procedure_3010_incominglinks=incoming links
-NavigatorGroupName_Procedure_3010_outgoinglinks=outgoing links
+#NavigatorGroupName_Procedure_3010_incominglinks=incoming links
+#NavigatorGroupName_Procedure_3010_outgoinglinks=outgoing links
 NavigatorGroupName_Condition_3003_incominglinks=incoming links
 NavigatorGroupName_Condition_3003_outgoinglinks=outgoing links
 NavigatorGroupName_Handler_3008_incominglinks=incoming links
 NavigatorGroupName_Handler_3008_outgoinglinks=outgoing links
-NavigatorGroupName_Program_2001_incominglinks=incoming links
-NavigatorGroupName_Program_2001_outgoinglinks=outgoing links
+#NavigatorGroupName_Program_2001_incominglinks=incoming links
+#NavigatorGroupName_Program_2001_outgoinglinks=outgoing links
 NavigatorGroupName_Procedure_3005_incominglinks=incoming links
 NavigatorGroupName_Procedure_3005_outgoinglinks=outgoing links
 NavigatorGroupName_WhileLoop_3007_incominglinks=incoming links
 NavigatorGroupName_WhileLoop_3007_outgoinglinks=outgoing links
 NavigatorGroupName_Specification_1000_links=links
-NavigatorGroupName_Predicate_3004_incominglinks=incoming links
-NavigatorGroupName_Predicate_3004_outgoinglinks=outgoing links
+#NavigatorGroupName_Predicate_3004_incominglinks=incoming links
+#NavigatorGroupName_Predicate_3004_outgoinglinks=outgoing links
 NavigatorGroupName_ForEachLoop_3006_incominglinks=incoming links
 NavigatorGroupName_ForEachLoop_3006_outgoinglinks=outgoing links
 NavigatorActionProvider_OpenDiagramActionName=Open Diagram
@@ -101,26 +101,26 @@ AbstractParser_UnknownLiteral=Unknown literal: {0}
 MessageFormatParser_InvalidInputError=Invalid input at {0}
 ParallelJModelingAssistantProviderTitle=Select domain model element
 ParallelJModelingAssistantProviderMessage=Available domain model elements:
-Program2CreationTool_title=Program
-Program2CreationTool_desc=Create new Program
-Link3CreationTool_title=Link
-Link3CreationTool_desc=Create new Link
-Data5CreationTool_title=Data
-Data5CreationTool_desc=Create new Data
-Procedure7CreationTool_title=Procedure
-Procedure7CreationTool_desc=Create new Procedure
-ForEachLoop8CreationTool_title=ForEachLoop
-ForEachLoop8CreationTool_desc=Create new ForEachLoop
-WhileLoop9CreationTool_title=WhileLoop
-WhileLoop9CreationTool_desc=Create new WhileLoop
-Handler10CreationTool_title=Handler
-Handler10CreationTool_desc=Create new Handler
-InputCondition12CreationTool_title=InputCondition
-InputCondition12CreationTool_desc=Create new InputCondition
-OutputCondition13CreationTool_title=OutputCondition
-OutputCondition13CreationTool_desc=Create new OutputCondition
-Condition14CreationTool_title=Condition
-Condition14CreationTool_desc=Create new Condition
+#Program2CreationTool_title=Program
+#Program2CreationTool_desc=Create new Program
+#Link3CreationTool_title=Link
+#Link3CreationTool_desc=Create new Link
+#Data5CreationTool_title=Data
+#Data5CreationTool_desc=Create new Data
+#Procedure7CreationTool_title=Procedure
+#Procedure7CreationTool_desc=Create new Procedure
+#ForEachLoop8CreationTool_title=ForEachLoop
+#ForEachLoop8CreationTool_desc=Create new ForEachLoop
+#WhileLoop9CreationTool_title=WhileLoop
+#WhileLoop9CreationTool_desc=Create new WhileLoop
+#Handler10CreationTool_title=Handler
+#Handler10CreationTool_desc=Create new Handler
+#InputCondition12CreationTool_title=InputCondition
+#InputCondition12CreationTool_desc=Create new InputCondition
+#OutputCondition13CreationTool_title=OutputCondition
+#OutputCondition13CreationTool_desc=Create new OutputCondition
+#Condition14CreationTool_title=Condition
+#Condition14CreationTool_desc=Create new Condition
 Context1Group_title=Context
 Objects2Group_title=Objects
 ComplexObjects3Group_title=Complex Objects
