BusinessProcedure Added to GMF

--- a/org.parallelj.designer/messages.properties
+++ b/org.parallelj.designer/messages.properties
@@ -152,3 +152,5 @@ NavigatorGroupName_Procedure_3013_incominglinks=incoming links
 NavigatorGroupName_Procedure_3013_outgoinglinks=outgoing links
 NavigatorGroupName_Block_3012_incominglinks=incoming links
 NavigatorGroupName_Block_3012_outgoinglinks=outgoing links
+NavigatorGroupName_BusinessProcedure_3014_incominglinks=incoming links
+NavigatorGroupName_BusinessProcedure_3014_outgoinglinks=outgoing links
