modified based on #44 comments for, - episode files, for dealing with xsd inheritance and generation, (optional) - binding file, (optional) - a text field so as to define other parameters for the xjc generation

--- a/org.parallelj.extensions.data/src/main/resources/messages.properties
+++ b/org.parallelj.extensions.data/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ LOG03W=The specified value for the Logger level is not correct. It could be: FIN
 #Messages related to the wizard
 INVALID_XMLPACKAGE_ERROR = please select a valid target package compliant with checked file type
 XMLHELPER_GENERATION_INFO = XML helper classes will be generated in selected target package
-JAXBANNOTED_POJO_INFO = JAXB annotated Pojos will be prior generated in selected target package
+JAXBANNOTED_POJO_INFO = Generate JAXB Pojos
 EXISTINGJAXB_ANNOTED_POJO_INFO = Existing JAXB annotated Pojos in current selected target package may be erased by this operation
 NOEXISTING_JAXBPOJO_ERROR = Current selected target package has no existing JAXB annotated Pojos
 JAVA_GENERATION_LABEL = Java generation for Data Flow processing
@@ -19,6 +19,7 @@ SELECT_PROJECT_ERROR=The specified project cannot be used...
 ACTION_ERROR=Error while JXAB pojo generation : {0}
 PACKAGE_DIALOG_LABEL=Choose a folder:
 PACKAGE_DIALOG_TITLE=Package Selection
+OPTION_LABEL=XJC options:
 
 #Messages related to the Console Manager
 CONSOLE_NAME=EasyFlow Migration Path
